<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/user_ic_favorite"
        android:title="@string/user_menu_favorite" />
    <item
        android:id="@+id/menu_clear_cache"
        android:icon="@drawable/user_ic_clear_cache"
        android:title="@string/user_menu_clear_cache" />

    <item
        android:id="@+id/menu_upgrade"
        android:icon="@drawable/user_ic_new"
        android:title="@string/user_menu_upgrade" />
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/user_ic_about"
        android:title="@string/user_menu_about" />
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/user_ic_exit"
        android:title="@string/user_menu_logout" />
</menu>